grub-core: enable getenv for all efi targets

--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -820,8 +820,7 @@ module = {
 module = {
   name = getenv;
   common = commands/efi/getenv.c;
-  enable = i386_efi;
-  enable = x86_64_efi;
+  enable = efi;
 };
 
 module = {
